--- a/report/bms.tex
+++ b/report/bms.tex
@@ -14,7 +14,7 @@ One of the most common form factors is the cylindrical cell referred to as 18650
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.3\textwidth]{Figures/missing.png}%Missing: Cellstruct.png
+	\includegraphics[width=0.3\textwidth]{Figures/cellstruct.png}
 	\caption{\gls{lion} 18650 battery structure}
 	\label{fig:cellstruct}
 \end{figure}
@@ -32,7 +32,7 @@ The preferred way of charging \gls{lion} batteries is \gls{cccv}-charging. The c
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.3\textwidth]{Figures/missing.png} %Missing: cccv.png
+	\includegraphics[width=0.3\textwidth]{Figures/cccv.jpg}
 	\caption{Behaviour of \gls{cccv}-charging}
 	\label{fig:cccv}
 \end{figure}
@@ -47,12 +47,12 @@ Cell balancing is used for one or more of these purposes\cite{book183}:
 	\item Maximize available battery energy
 \end{itemize}
 
-\autoref{fig:variations} shows the variations that can occur between cells in a series stack.
+\autoref{fig:variations} Shows the variations that can occur between cells in a series stack.
 %Note \ref is used here since \autoref sadly doesn't automatically uppercase beginning of sentences
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.3\textwidth]{Figures/missing.png} %Missing: variations.png
+	\includegraphics[width=0.3\textwidth]{Figures/variations.png} 
 	\caption{Series stack cell variations.}
 	\label{fig:variations}
 \end{figure}
@@ -74,7 +74,7 @@ Figure \autoref{fig:protection} is an illustration of a protected \gls{lion} bat
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.3\textwidth]{Figures/missing.png} %Missing: protection.png
+	\includegraphics[width=0.3\textwidth]{Figures/protection.png}
 	\caption{A protected 18650 cell.}
 	\label{fig:protection}
 \end{figure}
@@ -99,14 +99,14 @@ Safety is of high priority as concluded earlier. So a second flowchart was creat
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.3\textwidth]{Figures/missing.png} %Missing: powerinput.png
+	\includegraphics[width=0.3\textwidth]{Figures/powerinput.png}
 	\caption{Power input flowchart}
 	\label{fig:powerinput}
 \end{figure}
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.3\textwidth]{Figures/missing.png} %Missing: battery.png
+	\includegraphics[width=0.3\textwidth]{Figures/battery.png}
 	\caption{Battery management flowchart}
 	\label{fig:battery}
 \end{figure}
@@ -143,8 +143,8 @@ Figure \autoref{fig:modules} displays how the \gls{bms} is currently set up. Up 
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.3\textwidth]{Figures/missing.png} %Missing: modules.png
-	\caption{Current setup.} %Current what setup?
+	\includegraphics[width=0.3\textwidth]{Figures/modules.png}
+	\caption{Current setup of the battery management.}
 	\label{fig:modules}
 \end{figure}
 
@@ -153,7 +153,7 @@ Charging is done by turning the device upside down and connecting a \gls{2s} \gl
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.3\textwidth]{Figures/missing.png} %Missing: charging.png
+	\includegraphics[width=0.3\textwidth]{Figures/charging.png}
 	\caption{How to charge}
 	\label{fig:charging}
 \end{figure}
@@ -162,7 +162,7 @@ A connection diagram for this configuration can be seen in figure\autoref{fig:di
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.3\textwidth]{Figures/missing.png} %Missing: diagram.png
+	\includegraphics[width=0.3\textwidth]{Figures/diagram.jpg}
 	\caption{Connection diagram.}
 	\label{fig:diagram}
 \end{figure} 
@@ -172,7 +172,7 @@ Schematics, board layout, and Gerber-files can all be found in the appendix. %No
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.3\textwidth]{Figures/missing.png} %Missing bmspwb.png
+	\includegraphics[width=0.3\textwidth]{Figures/bmspwb.png}
 	\caption{\gls{bms} \gls{pwb}}
 	\label{fig:bmspwb}
 \end{figure}
