--- a/report/main.tex
+++ b/report/main.tex
@@ -118,7 +118,7 @@
 
 
 \clearpage
-\section{Battery charging circuitry}\label{sec:bat}
+\section{Battery Management}\label{sec:bat}
 \chapterauthor{Grape, Elias (Lundberg, Josef)}
 \input{bms.tex}
 
