--- a/report/references.tex
+++ b/report/references.tex
@@ -117,4 +117,23 @@ Estimation, Control, and the Discrete Kalman Filter, 1989. Donald E. Catlin
 \bibitem{pertubation}
   \url{https://en.wikipedia.org/wiki/Perturbation_theory}
 
+\bibitem{book26}
+Weicker, P. (2014). A Systems Approach to Lithium-ion Battery Management. (pp.26-27). Boston: Artech House. 
+
+\bibitem{book111}
+Weicker, P. (2014). A Systems Approach to Lithium-ion Battery Management. (pp.111). Boston: Artech House. 
+
+\bibitem{book112}
+Weicker, P. (2014). A Systems Approach to Lithium-ion Battery Management. (pp.111-112). Boston: Artech House.
+
+\bibitem{book183}
+Weicker, P. (2014). A Systems Approach to Lithium-ion Battery Management. (pp.183-185). Boston: Artech House.
+
+\bibitem{book35}
+Weicker, P. (2014). A Systems Approach to Lithium-ion Battery Management. (pp.35-38). Boston: Artech House.
+
+\bibitem{webpage}
+  \url{http://www.lygte-info.dk/info/battery%20protection%20UK.html}
+(pp. [Page number starts]-[ends]).
+
 \end{thebibliography}
