well this will need a merge

--- a/report/APPENDIX.tex
+++ b/report/APPENDIX.tex
@@ -1,34 +1,46 @@
-\section{APPENDIX}\label{sec:app}
+\section{Large Figures}\label{sec:app}
 
-\begin{figure}[htb]
-	\centering
-    \includegraphics[width=\linewidth]{Figures/casing_dimensions.png}
-	\caption{System enclosure shape and dimensions}
-	\label{fig:casdim}
-\end{figure}
-
+\subsection{Schematic}
 %Image of schematic(s) (Rev 3)
-\begin{figure}[htb]
+\begin{figure}[h]
 	\centering
-    \includegraphics[width=\linewidth]{Figures/schem_r3_a.png}
+    \includegraphics[width=.9\linewidth]{Figures/schem_r3_a.png}
 	\caption{Schematic of revision 3, part a: Required circuitry}
 	\label{fig:schr3a}
 \end{figure}
-\begin{figure}[tbh]
+\begin{figure}[h]
 	\centering
     \includegraphics[width=\linewidth]{Figures/schem_r3_b.png}
 	\caption{Schematic of revision 3, part b: Modules}
 	\label{fig:schr3b}
 \end{figure}
-\begin{figure}[tbh]
+\begin{figure}[h]
 	\centering
     \includegraphics[width=\linewidth]{Figures/schem_r3_c.png}
 	\caption{Schematic of revision 3, part c: Meta circuitry}
 	\label{fig:schr3c}
 \end{figure}
 
-%Image of circuit board(s) are sectionlocals labled as "fig:pcbr*"
+\clearpage
+\subsection{CubeMX software}
+% Image of CubeMX software
+\begin{figure}[tbh]
+	\centering
+    \includegraphics[width=\linewidth]{Figures/MXCube.png}
+	\caption{CubeMX software}
+	\label{fig:mxc}
+\end{figure}
 
+\clearpage
+\section{Other Figures}
+\subsection{Casing Dimensions}
+\begin{figure}[htb]
+	\centering
+    \includegraphics[width=\linewidth]{Figures/casing_dimensions.png}
+	\caption{System enclosure shape and dimensions}
+	\label{fig:casdim}
+\end{figure}
+%Image of circuit board(s) are sectionlocals labled as "fig:pcbr*"
 
 %INSERT Image of Battery circuit
 
