--- a/report/main.tex
+++ b/report/main.tex
@@ -4,6 +4,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[numbers,super]{natbib}
 \usepackage{lipsum}
+\usepackage[toc,page]{appendix}
 \usepackage{amssymb,amsmath}
 \usepackage{gensymb}
 \usepackage{amsfonts}
@@ -96,54 +97,57 @@
 \setcounter{page}{2}
 \section{Introduction}
 \chapterauthor{Eriksson, Kenny (Sjölund, Johannes)}
-\input{introduction.tex}
+%\input{introduction.tex}
 
+\clearpage
 \section{The Physics of Sailing}
 \label{sec:physics}
 \chapterauthor{Theolin, Henrik (Axelsson, Oskar)}
-\input{physics.tex}
+%\input{physics.tex}
 
-\section{Product Application}
-\label{sec:application}
-\input{application.tex}
+%\section{Product Application}
+%\label{sec:application}
+%\input{application.tex}
+
 \clearpage
 \section{Mechanical sensors}
 \chapterauthor{Lundberg, Josef (Grape, Elias)}
-\input{sensors.tex}
+%\input{sensors.tex}
 
 \clearpage
 \section{Main sensorboard design}\label{sec:hw}
 \chapterauthor{Brolin, Daniel (Eriksson, Kenny)}
-\input{hw_design.tex}
-
+%\input{hw_design.tex}
 
 \clearpage
 \section{Battery charging circuitry}\label{sec:bat}
 \chapterauthor{Grape, Elias (Lundberg, Josef)}
-\input{bms.tex}
+%\input{bms.tex}
 
 \clearpage
 \section{Casing}\label{sec:case}
 \chapterauthor{Lundberg, Josef (One, No )}
-\input{casing.tex}
+%\input{casing.tex}
 
 \clearpage
 \section{Software Design}\label{sec:sw}
 \chapterauthor{Sjölund, Johannes (Brolin, daniel)}
 \input{software_design.tex}
-\input{android.tex}
-\input{software_results.tex}
+%\input{android.tex}
+%\input{software_results.tex}
 
 \clearpage
 \section{Inertial Navigation System and Kalman Filter}
 \label{kf}
 \chapterauthor{Axelsson, Oskar (Theolin, Henrik)}
-\input{kf.tex}
+%\input{kf.tex}
 
 \clearpage
 \input{references.tex}
 \clearpage
+\begin{appendices}
 \input{APPENDIX.tex}
+\end{appendices}
 
 
 \end{document}
