--- a/report/APPENDIX.tex
+++ b/report/APPENDIX.tex
@@ -22,7 +22,7 @@
 \end{figure}
 
 \clearpage
-\subsection{CubeMX software}
+\subsection{CubeMX software}\label{sec:app:mxc}
 % Image of CubeMX software
 \begin{figure}[tbh]
 	\centering
