--- a/report/hw_design.tex
+++ b/report/hw_design.tex
@@ -45,7 +45,8 @@ Non-standard library entries include following components:\\
 \centering
 	\begin{tabular}{ l | l | l | l }
  	Name		& Type 								& Library 				& Used in         \\
- 			&									&					& last rev.\footnote{revision}\\\hline
+ 			&									&					& last rev.\footnote{revision}\\
+	\hline
   	A2235-H  	& \gls{gps} 								& a2235-h.lib 			& \textbf{YES}\\
   	FT232RL 	& USBtoSerial converter 						& ftdi.lib\cite{ftdi}			& \textbf{YES}\\
   	HTS221 	& Humidity sensor 							& Custom\_sensors.lib 		& \textbf{YES}\\
@@ -61,6 +62,7 @@ Non-standard library entries include following components:\\
 \label{table:nstdlibs}
 \end{table}
 \end{minipage}
+\vfill
 
 %\subsection{Revisions}\label{sec:hw:rev}
 In total three revisions of the \gls{pcb} was designed. The first revision was designed well before any components arrived and was meant exclusively as a prototype, while both the second and third revisions were supposed to have full functionality. All revisions following the first were initially supposed to be designed as consecutive debugged states, but complete redesigns of component placings and tracing was eventually necessary.
