--- a/report/main.tex
+++ b/report/main.tex
@@ -97,50 +97,46 @@
 \setcounter{page}{2}
 \section{Introduction}
 \chapterauthor{Eriksson, Kenny (Sjölund, Johannes)}
-%\input{introduction.tex}
+\input{introduction.tex}
 
 \clearpage
 \section{The Physics of Sailing}
 \label{sec:physics}
 \chapterauthor{Theolin, Henrik (Axelsson, Oskar)}
-%\input{physics.tex}
-
-%\section{Product Application}
-%\label{sec:application}
-%\input{application.tex}
+\input{physics.tex}
 
 \clearpage
 \section{Mechanical sensors}
 \chapterauthor{Lundberg, Josef (Grape, Elias)}
-%\input{sensors.tex}
+\input{sensors.tex}
 
 \clearpage
 \section{Main sensorboard design}\label{sec:hw}
 \chapterauthor{Brolin, Daniel (Eriksson, Kenny)}
-%\input{hw_design.tex}
+\input{hw_design.tex}
 
 \clearpage
 \section{Battery Management}\label{sec:bat}
 \chapterauthor{Grape, Elias (Lundberg, Josef)}
-%\input{bms.tex}
+\input{bms.tex}
 
 \clearpage
 \section{Casing}\label{sec:case}
 \chapterauthor{Lundberg, Josef (One, No )}
-%\input{casing.tex}
+\input{casing.tex}
 
 \clearpage
 \section{Software Design}\label{sec:sw}
 \chapterauthor{Sjölund, Johannes (Brolin, daniel)}
 \input{software_design.tex}
-%\input{android.tex}
-%\input{software_results.tex}
+\input{android.tex}
+\input{software_results.tex}
 
 \clearpage
 \section{Inertial Navigation System and Kalman Filter}
 \label{kf}
 \chapterauthor{Axelsson, Oskar (Theolin, Henrik)}
-%\input{kf.tex}
+\input{kf.tex}
 
 \clearpage
 \input{references.tex}
