--- a/report/titlepage.tex
+++ b/report/titlepage.tex
@@ -9,8 +9,13 @@
 
 \textsc{\Large Dept. of Computer Science, Electrical and Space Engineering}\\[0.5cm] % Major heading such as course name
 
-\textsc{\large D7039E -- Project in Industrial Computer Systems}\\[0.5cm] % Minor heading such as course title
-
+\begin{centering}
+\begin{tabular}{l l}
+\textsc{\large D7039E --}	& \textsc{\large Project in Industrial Computer Systems}\\ % Minor heading such as course title
+\textsc{\large E7025E --}	& \textsc{\large Project in Engineering Physics and}\\
+				& \textsc{\large Electrical engineering} % Minor heading such as course title
+\end{tabular}
+\end{centering}\\[0.5cm]
 %------------------------------------------------
 %	Title
 %------------------------------------------------
@@ -27,18 +32,23 @@
 \begin{minipage}{0.4\textwidth}
 	\begin{flushleft}
 		\large
-		\textit{Authors}\\
+		\emph{Authors}\\
 		Axelsson Oskar, \\ 
 		Brolin, Daniel, \\ 
 		Eriksson, Kenny \\ 
 		Grape, Elias \\ 
 		Lundberg, Josef, \\ 
 		Sjölund, Johannes \\
-		Theolin, Henrik
+		Theolin, Henrik\\
 	\end{flushleft}
 \end{minipage}
 ~
 \begin{minipage}{0.4\textwidth}
+	\begin{flushright}
+		\large
+		\textit{Managing Editor}\\
+		Kenny or daniel
+	\end{flushright}
 	\begin{flushright}
 		\large
 		\textit{Supervisor}\\
