--- a/report/sensors.tex
+++ b/report/sensors.tex
@@ -120,18 +120,20 @@ A new product called "micro-lidar" can be used, as it is both have a small form 
 The chosen circuit is VL53L0X from Adafruit\cite{micro_lidar}. 
 
 \begin{figure}[H]
+	\centering
 	\includegraphics[width = 10cm]{Figures/Adafruit_height_sensor.png}
 	\caption{Time of flight, $\mu$\gls{lidar}, distance sensor Adafruit VL53L0X}
 	\label{micro_lidar}
 \end{figure}
 
-It can measure hights up one meters with great accuracy and communicates with \gls{i2c}.
+It can measure heights up one meters with great accuracy and communicates with \gls{i2c}.
 
 By the fact that the sensor must be waterproof the signal has to go through a medium. The medium can be some type of plastic or even glass.   
 
 All the information about this sensor when used with a cover widow can be found in the specific datasheet: “VL53L0X ranging module cover window guidelines” \cite{Tof_cover}. The maximum thickness of the cover window and the air gap between the sensor and the window is 2 mm. That’s the parameters that need to be considered. The cover window can be some type of plastic or glass. To reflect the signal a detection plate is constructed and fastened to the top of the daggerboard. This plate is level with the sensor and has a white underside for best performance of the sensor. 
 
 \begin{figure}[H]
+	\centering
 	\includegraphics[width = 10cm]{Figures/height_measure.jpg}
 	\caption{Height measurement model}
 	\label{height_measure}
