--- a/report/software_design.tex
+++ b/report/software_design.tex
@@ -11,7 +11,7 @@ The software has been divided into two parts, the firmware for the \gls{arm} \gl
 
 For rapid prototyping and firmware development purposes, the NUCLEO-F411RE development board seen in \autoref{nucleo-board} was used. This board contains break-out pins for the \gls{arm} Cortex-M microcontroller STM32F411RE, an \gls{uart} to \gls{usb} bridging circuit and general purpose \gls{led}s and buttons. It is compatible with various Arduino shields\footnote{Shields are boards that can be plugged on top of the development board, extending its capabilities.} as well as expansion boards developed by \gls{st}.
 
-In order to speed up firmware development, the STM32CubeMX \cite{stm32cubemx} initialization code generator was used to set up a basic working system. This application, developed by \gls{st}, can generate C language code for setting up \gls{mcu} clocks, peripherals, interrupts and similar. It is controlled by a graphical interface (appendix \autoref{fig:mxc}) for setting \gls{mcu} options and controlling the previously mentioned code generation.
+In order to speed up firmware development, the STM32CubeMX \cite{stm32cubemx} initialization code generator was used to set up a basic working system. This application, developed by \gls{st}, can generate C language code for setting up \gls{mcu} clocks, peripherals, interrupts and similar. It is controlled by a graphical interface (Appendix \ref{sec:app:mxc}) for setting \gls{mcu} options and controlling the previously mentioned code generation.
 
 The main challenge in working with this type of code generation is integrating it with external software libraries directly not built for it. If the library interferes with generated code by overriding settings and register values, the software may enter an undefined state and stop working. Care therefore had to be taken to only use the parts of the libraries which did not interfere. Frequent testing of any newly added functionality had to be done in order to find interfering parts.
 
